--- a/app/src/main/res/drawable/right_navigate.xml
+++ b/app/src/main/res/drawable/right_navigate.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners
+        android:bottomLeftRadius="500dp"
+        android:topLeftRadius="500dp"
+        android:bottomRightRadius="0dp"
+        android:topRightRadius="0dp" />
 
+    <solid android:color="#3F8e58d1" />
 </shape>
