--- a/app/src/main/res/layout-large/activity_test.xml
+++ b/app/src/main/res/layout-large/activity_test.xml
@@ -87,7 +87,7 @@
             android:visibility="visible"
             android:text="Rev Info." />
 
-        <ImageView
+<!--        <ImageView
             android:id="@+id/menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -96,13 +96,24 @@
             android:layout_marginTop="10dp"
             android:layout_toStartOf="@id/time_layout"
             android:visibility="visible"
-            app:srcCompat="@drawable/ic_info_black_24dp" />
+            app:srcCompat="@drawable/ic_info_black_40dp" />-->
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/menu"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:layout_marginEnd="10dp"
+            android:layout_toStartOf="@+id/time_layout"
+            app:backgroundTint="@android:color/holo_blue_dark"
+            app:srcCompat="@drawable/downarrow_white" />
 
         <LinearLayout
             android:id="@+id/time_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_marginTop="5dp"
             android:gravity="center"
             android:layout_marginEnd="5dp">
 
