--- a/app/src/main/res/layout-large/reviewscreen.xml
+++ b/app/src/main/res/layout-large/reviewscreen.xml
@@ -1,5 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="900dp"
+    android:layout_height="450dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <ImageView
+        android:id="@+id/layout_img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:scaleType="fitXY" />
+
+    <ImageButton
+        android:id="@+id/img_left_arrow"
+        android:layout_width="50sp"
+        android:layout_height="100sp"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/img_right_arrow"
+        android:background="@drawable/left_navigate"
+        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
+
+    <ImageButton
+        android:id="@+id/img_right_arrow"
+        android:layout_width="50sp"
+        android:layout_height="100sp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/iv_close"
+        android:layout_marginTop="154dp"
+        android:background="@drawable/right_navigate"
+        app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_close_black_24dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/iv_close"/>
 </RelativeLayout>
