--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -124,70 +124,46 @@
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/tv_attempted_label"
                 android:layout_marginStart="5dp"
+                android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:id="@+id/tv_attempted"/>
 
-            </RelativeLayout>
+                <ImageView
+                    android:id="@+id/skipped_icon"
+                    android:layout_below="@id/tv_attempted_label"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/number_skipped" />
 
-        </android.support.v7.widget.CardView>
+                <TextView
+                    android:id="@+id/tv_skipped_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_below="@id/tv_attempted_label"
+                    android:layout_marginTop="5dp"
+                    android:layout_toEndOf="@id/skipped_icon"
+                    android:text="No. of Questions skipped: "
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
 
-        <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="5dp"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/line2">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/skipped_icon"
-                app:srcCompat="@drawable/number_skipped"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="No. of Questions skipped: "
-                android:id="@+id/tv_skipped_label"
-                android:layout_toEndOf="@id/skipped_icon"
-                android:layout_marginStart="10dp"
-                android:textColor="@android:color/black"
-                android:textSize="20sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/tv_skipped_label"
-                android:layout_marginStart="5dp"
-                android:textSize="20sp"
-                android:id="@+id/tv_skipped"/>
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="5dp"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true">
-
-            <RelativeLayout
-                android:id="@+id/line3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tv_skipped"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_below="@id/tv_attempted_label"
+                    android:layout_toEndOf="@id/tv_skipped_label"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
 
                 <ImageView
                     android:id="@+id/bookmarked_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_skipped_label"
+                    android:layout_marginTop="5dp"
                     app:srcCompat="@drawable/number_bookmark" />
 
                 <TextView
@@ -196,6 +172,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_toEndOf="@id/bookmarked_icon"
+                    android:layout_below="@id/tv_skipped_label"
+                    android:layout_marginTop="5dp"
                     android:text="No. of Questions bookmarked: "
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
@@ -205,7 +183,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
+                    android:layout_below="@id/tv_skipped_label"
+                    android:layout_marginTop="5dp"
                     android:layout_toEndOf="@id/tv_bookmarked_label"
+                    android:textColor="@android:color/black"
                     android:textSize="20sp" />
 
             </RelativeLayout>
@@ -349,6 +330,30 @@
                     android:layout_marginStart="10dp"
                     android:layout_toEndOf="@id/tv_totalScore_label"
                     android:layout_below="@+id/tv_totalNegative_label"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/tv_totalPercentage_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_totalScore_label"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="10dp"
+                    android:text="Total Percentage : "
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+
+                <TextView
+                    android:id="@+id/tv_totalPercentage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_toEndOf="@id/tv_totalPercentage_label"
+                    android:layout_below="@id/tv_totalScore_label"
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
             </RelativeLayout>
