--- a/app/src/main/res/layout/activity_flash_card.xml
+++ b/app/src/main/res/layout/activity_flash_card.xml
@@ -56,7 +56,7 @@
         android:layout_above="@+id/action_buttons"
         android:orientation="horizontal">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.5">
@@ -89,20 +89,7 @@
 
             </ScrollView>
 
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab_fgroupQview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="20dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:visibility="gone"
-                android:tint="#000000"
-                android:src="@drawable/gques"/>
-
-        </RelativeLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -110,6 +97,41 @@
             android:weightSum="5"
             android:orientation="vertical"
             android:layout_weight="8.5">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="2dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal|center_vertical|center"
+                    android:layout_weight="1">
+                    <Button
+                        android:id="@+id/btn_groupQues"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:background="@drawable/groupletter" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal|center_vertical|center"
+                    android:layout_weight="1">
+                    <Button
+                        android:id="@+id/btn_exit"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/exit" />
+
+                </LinearLayout>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
