--- a/app/src/main/res/layout/activity_flash_attempt_data.xml
+++ b/app/src/main/res/layout/activity_flash_attempt_data.xml
@@ -11,7 +11,107 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <LinearLayout
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_ftestid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TestId"
+                android:textSize="22sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:gravity="center_horizontal"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_weight="1"
+                        android:textStyle="bold"
+                        android:text="Min.Score:"/>
+
+                    <TextView
+                        android:id="@+id/tv_minpercent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_weight="1"
+                        android:textStyle="bold"
+                        android:hint="Min.Score:"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_weight="1"
+                        android:textStyle="bold"
+                        android:text="Max.Score:"/>
+
+                    <TextView
+                        android:id="@+id/tv_maxpercent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_weight="1"
+                        android:textStyle="bold"
+                        android:hint="Max.Score:"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_weight="1"
+                        android:textStyle="bold"
+                        android:text="Avg.Score:"/>
+
+                    <TextView
+                        android:id="@+id/tv_avgpercent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_weight="1"
+                        android:textStyle="bold"
+                        android:hint="Avg.Score:"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
