--- a/app/src/main/res/layout-xlarge/activity_flash_card.xml
+++ b/app/src/main/res/layout-xlarge/activity_flash_card.xml
@@ -92,7 +92,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:weightSum="5"
             android:orientation="vertical"
             android:layout_weight="8.5">
@@ -113,6 +113,7 @@
                         android:id="@+id/btn_groupQues"
                         android:layout_width="35dp"
                         android:layout_height="35dp"
+                        android:visibility="gone"
                         android:background="@drawable/groupletter" />
 
                 </LinearLayout>
