--- a/app/src/main/res/layout/activity_flash_card.xml
+++ b/app/src/main/res/layout/activity_flash_card.xml
@@ -51,7 +51,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/header"
         android:layout_above="@+id/action_buttons"
         android:orientation="horizontal">
@@ -114,6 +114,7 @@
                         android:id="@+id/btn_groupQues"
                         android:layout_width="35dp"
                         android:layout_height="35dp"
+                        android:visibility="gone"
                         android:background="@drawable/groupletter" />
 
                 </LinearLayout>
