--- a/app/src/main/res/layout/activity_flash_card.xml
+++ b/app/src/main/res/layout/activity_flash_card.xml
@@ -83,6 +83,7 @@
                         android:id="@+id/fl_ivques"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:scaleType="fitXY"
                         android:adjustViewBounds="true" />
 
                 </android.support.v7.widget.CardView>
